# pyclarcs

./: .gitignore  CLAUDE.md  README.md  demo_symmetry.py  pyproject.toml
data/: benchmark_compare.py  download_paleobrain.py  generate_samples.py  generate_synth_data.py  run_pipeline.py
data/pipeline_fullres/: canonical-symplane.pl  canonical-symplane.vtk  ref-symplane.pl  ref-symplane.vtk  target-recentered.pl  target-symplane.pl  target-symplane.vtk
data/results_compare/: results.csv
data/results_compare_final/: results.csv
data/results_compare_final2/: results.csv
data/results_compare_rkhs/: results.csv
data/results_compare_sym/: results.csv
data/results_compare_tgd/: results.csv
data/results_folding/: reg_fixed.vtk  reg_lambda05.vtk  reg_lapsmooth.vtk  reg_nopyramid.vtk  reg_norkhs.vtk  reg_sigmin1.vtk
data/results_fullres/: ref-recentered.pl  target-recentered.pl
data/results_pyramid/: reg_1level.vtk  reg_2levels.vtk
data/results_realistic/: reg_baseline.vtk  reg_demons.vtk  reg_demons_add.vtk  reg_lap.vtk
data/test/: ellipsoid_skull_noisy_target-normalized-deformation.vtk  ellipsoid_skull_noisy_target-normalized-nlregistered.vtk  ellipsoid_skull_noisy_target-normalized.vtk  endocranium_mni_pial_10k_target-normalized-deformation.vtk  endocranium_mni_pial_10k_target-normalized-nlregistered.vtk  endocranium_mni_pial_10k_target-normalized.vtk
data/test_mni/: endocranium_mni_pial-symplane.pl  endocranium_mni_pial-symplane.vtk  endocranium_mni_pial_target-symplane.pl  endocranium_mni_pial_target-symplane.vtk
data/test_mni-multires/: endocranium_mni_pial_10k-recentered.vtk  endocranium_mni_pial_10k-symplane.pl  endocranium_mni_pial_10k-symplane.vtk  endocranium_mni_pial_10k_target-recentered-normalized-deformation.vtk  endocranium_mni_pial_10k_target-recentered-normalized-nlregistered.vtk  endocranium_mni_pial_10k_target-recentered-normalized.vtk  endocranium_mni_pial_10k_target-symplane.pl
data/test_mni-multires2/: target-normalized.vtk  target-recentered.vtk
data/test_mni_new/: endocranium_mni_pial-symplane.pl  endocranium_mni_pial-symplane.vtk  endocranium_mni_pial_target-symplane.pl  endocranium_mni_pial_target-symplane.vtk
data/test_new/: ellipsoid_skull_noisy-symplane.pl  ellipsoid_skull_noisy_target-recentered-normalized-deformation.vtk  ellipsoid_skull_noisy_target-recentered-normalized-nlregistered.vtk  ellipsoid_skull_noisy_target-recentered-normalized.vtk  ellipsoid_skull_noisy_target-recentered.vtk  ellipsoid_skull_noisy_target-symplane.pl  ellipsoid_skull_noisy_target-symplane.vtk  endocranium_mni_pial_10k_target-recentered-normalized-deformation.vtk  endocranium_mni_pial_10k_target-recentered-normalized-nlregistered.vtk  (+4 more)
docs/: asymmetry.md  atlas.md  centerofmass.md  downsample.md  mirror.md  nlregister.md  normalize.md  orient.md  project-asym.md  recenter.md  register.md  reorient.md  rescale.md  sym-plane.md  symplane.md
tests/: test_alignment.py  test_atlas.py  test_symmetry.py
(+124 files in other folders)
