[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyclarcs"
version = "0.1.0"
description = "Automatic symmetry plane estimation for 3D surfaces (endocranial and others)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["symmetry", "vtk", "3d", "surface", "endocast", "paleoanthropology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "vtk>=9.0",
    "numba>=0.57",
]

[project.scripts]
clarcs = "pyclarcs._cli:main"
pyclarcs = "pyclarcs._cli:main"

[project.urls]
Homepage = "https://github.com/rdebroiz/pyclarcs"
Repository = "https://github.com/rdebroiz/pyclarcs"
"Bug Tracker" = "https://github.com/rdebroiz/pyclarcs/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyclarcs"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "pyproject.toml"]
